[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "qtrack-hospital-queue-env"
version = "1.0.0"
description = "QTrack Hospital Queue Optimization Environment — OpenEnv Hackathon"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SANTOSH-PRVT04"}
]
keywords = ["healthcare", "queue-management", "hospital", "ai-environment", "openenv"]
dependencies = [
    "gradio>=4.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "starlette==0.27.0",
    "openai>=1.0.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/SANTOSH-PRVT04/Q-track-ai-env"
Repository = "https://github.com/SANTOSH-PRVT04/ai.env"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
